test/files/neg/ambiguous-float-dots.scala
class A {
  val x0 = 5.
}

class B {
  val x1 = 5.f
  val y0 = 055
}

class D {
  1.+(2)
  1. + 2
  1 + 2
}
